POM.xml updates