@@ -47,21 +47,21 @@
                 <version>3.8.0</version>
                 <configuration>
                     <release>15</release>
-                    <compilerArgs> --enable-preview </compilerArgs>
+                    <!--compilerArgs>- -enable-preview</compilerArgs-->
                 </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
+                    <!--argLine>- -enable-preview</argLine-->
                 </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
+                    <!--argLine>- -enable-preview</argLine-->
                 </configuration>
             </plugin>
             <!--  Package as jar  -->
